# TCGResearch

./: .gitignore  .gitmodules  README.md  justfile
backend/gamdedev_local/app/: example.env
backend/operator/app/: Cargo.toml
backend/operator/app/src/: lib.rs  main.rs  types.rs
backend/operator/app/src/controllers/: mod.rs  register_game.rs  register_user.rs
backend/operator/app/src/extractors/: auth.rs  mod.rs
backend/operator/app/src/models/: database.rs  sqlite.rs
backend/operator/app/src/routes/: register_game.rs  register_user.rs
cards/collection_0/: 0  1  2  3  4  5  6  7  8  9
contracts/utgard/src/: Cards.sol
devtools/devback/: Cargo.toml
devtools/devback/src/: main.rs
devtools/devfront/: package-lock.json  package.json
devtools/devfront/app/: layout.tsx
devtools/devfront/components/: Layout.tsx  SideMenu.tsx
frontend/form/: index.html  main.css  test.html
frontend/mobile/: App.js  BoosterModal.js  CardModal.js  Cards.json  QrScanner.js  app.json  config.js  package-lock.json  package.json
frontend/mobile/android/: settings.gradle
frontend/mobile/ios/: Podfile
frontend/web/app/: layout.tsx
frontend/web/components/: login-tabs.tsx  sidebar.tsx
jotunheim/: package-lock.json  package.json
jotunheim/app/: page.tsx
jotunheim/components/: game-dev-panel.tsx
jotunheim/lib/: constants.ts
midgard/: App.js  CardShowcase.js  QrScanner.js  app.json  example.env  metro.config.js  package-lock.json  package.json  storage.js
midgard/midgard/: CardModal.js
utgard/cache/: solidity-files-cache.json
utgard/test/: Counter.t.sol
(+41 files in other folders)
