[package]
name = "helheim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
ctrlc = "3.4.1"
dotenv = "0.15.0"
ethers = "2.0.11"
rand = "0.8.5"
ron = "0.8.1"
scanpw = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

bindings = { path = "../bindings" }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.11.24"
sha3 = "0.10.8"
thiserror = "1.0.51"
axum = "0.7.4"
base64 = "0.22.0"
jsonwebtoken = "9.2.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
chrono = "0.4.35"
argon2 = "0.5.3"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
